[#128][#1408] feat: 관리자 상품 목록 조회 오프셋 페이지네이션 전환 기능 추가 (#1449)
- [x] OffsetResponse<T> 공통 응답 레코드 생성
- [x] GetAdminProductsUseCase 시그니처 변경 (cursor → page)
- [x] GetAdminProductsResult 오프셋 필드 전환 (page, pageSize, totalElements, totalPages)
- [x] FindPricePoliciesPort에 findPricePoliciesByOffset 오프셋 메서드 추가
- [x] GetAdminProductsService 독립 구현 (GetProductUseCase 위임 제거)
- [x] PricePolicyJpaRepository 오프셋 JPQL 쿼리 추가
- [x] PricePolicyPersistenceAdapter 오프셋 메서드 구현
- [x] GetAdminProductsResponse CursorResponse → OffsetResponse 전환 (record 변환)
- [x] ProductController cursor → page 파라미터 변경 + @min 검증 추가
- [x] GetAdminProductsApiDocs API 문서 업데이트